--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>无限书签</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./src/main/index.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <title>无限书签</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="./src/main/index.ts"></script>
+</body>
+
 </html>
